--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "mongo"
   ],
   "author": "k tech education",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
