--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "k tech education",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
